hover title fix + dark mode + links in new tab

--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
+:root {
+  --background-color: #eee;
+  --primary-font-color: black;
+  --secondary-font-color: gray;
+}
+
 * {
   margin: 0;
   padding: 0;
   border: 0;
 }
-a {
+a, span {
   text-transform: lowercase;
-  color: black;
+  color: var(--primary-font-color);
   text-decoration: none;
   opacity: inherit;
 }
@@ -18,7 +24,7 @@ a:hover {
 }
 #hamburger > path {
   fill: none;
-  stroke: black;
+  stroke: var(--primary-font-color);
   stroke-width:8;
 }
 #hamburger {
@@ -49,12 +55,12 @@ a:hover {
 
 hr {
   width: 35vw;               
-  background-color:#000;
+  background-color: var(--primary-font-color);
   height: 2px;
 }
 
 body {
-  background-color: #eee;
+  background-color: var(--background-color);
   font-size: 1.2rem;
 
   font-family: "Lato", sans-serif;
@@ -67,6 +73,7 @@ body {
   stroke-dasharray: 450;
   stroke-dashoffset: 450;
   animation: draw 2s linear forwards;
+  stroke: var(--primary-font-color);
 }
 #signature > path:nth-child(2) {
   animation-delay: 400ms;
@@ -133,7 +140,7 @@ body {
 }
 
 .gray {
-  color: gray;
+  color: var(--secondary-font-color);
 }
 
 .center {
@@ -184,3 +191,11 @@ body {
       background-color: blue;
   }
 } */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #040404;
+    --primary-font-color: white;
+    --secondary-font-color: #777;
+  }
+}
